test/corpus/statements.txt
==================
Estate header and params
==================

// The header names the estate; params bind the values a pack asks for.
estate acme

params {
  customer_domain = "example.com"
  retention_days  = 400            # a number
  want_optional   = false
  ratio           = 0.5
  offset          = -3
}

---

(source_file
  (comment)
  (header
    (identifier))
  (params
    (param
      (identifier)
      (string
        (string_content)))
    (param
      (identifier)
      (number))
    (comment)
    (param
      (identifier)
      (boolean))
    (param
      (identifier)
      (number))
    (param
      (identifier)
      (number))))

==================
Pack header with version
==================

pack monitoring.audit_logsink version "1.4"

---

(source_file
  (header
    (identifier)
    (string
      (string_content))))

==================
use in its three forms, and nested in a body
==================

use "acme-pack.satz"
use "acme-policies.satz" as google_org_policy_policy
use "acme-optional.satz" when want_optional
google_org_policy_policy {
  use "presets/CIS-GCP-Foundation-4.0.satz"
}

---

(source_file
  (use_statement
    (string
      (string_content)))
  (use_statement
    (string
      (string_content))
    (identifier))
  (use_statement
    (string
      (string_content))
    (identifier))
  (block
    (identifier)
    (body
      (use_statement
        (string
          (string_content))))))

==================
suppress with and without role
==================

suppress google_org_policy_policy "compute-managed-vmExternalIpAccess"
suppress google_organization_iam_member "group:gcp-auditors@{customer_domain}" role "roles/browser"

---

(source_file
  (suppress
    (identifier)
    (string
      (string_content)))
  (suppress
    (identifier)
    (string
      (string_content)
      (interpolation
        (parameter)))
    (string
      (string_content))))

==================
claim with each coverage word
==================

claim "cis-gcp" "4.0" "5.1" implements {
  resources      = ["google_storage_bucket.audit_logs"]
  interpretation = "Uniform bucket-level access on the audit bucket."
  duty_public_check = "Confirm public_access_prevention is enforced."
}
claim "cis-gcp" "4.0" "5.2" contributes {
  resources = ["google_storage_bucket.audit_logs"]
}
claim "cis-gcp" "4.0" "4.4" deviates {
  resources = ["google_org_policy_policy.compute_managed_requireOsLogin"]
  reason    = "A service here depends on metadata SSH keys."
}

---

(source_file
  (claim
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))
    (coverage)
    (body
      (attribute
        (identifier)
        (list
          (string
            (string_content))))
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (string
          (string_content)))))
  (claim
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))
    (coverage)
    (body
      (attribute
        (identifier)
        (list
          (string
            (string_content))))))
  (claim
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))
    (coverage)
    (body
      (attribute
        (identifier)
        (list
          (string
            (string_content))))
      (attribute
        (identifier)
        (string
          (string_content))))))

==================
question, question oneof with options
==================

question default_region {
  prompt    = "Which region should regional resources default to?"
  reversal  = state_surgery
  blast     = low
  recommend = "europe-west3"
}
question oneof group_model {
  prompt   = "Which security-group model does this customer run?"
  required = true
  option group_model_flat  { label = "Flat" }
  option group_model_split { label = "Split" why = "A distinct network team." }
}

---

(source_file
  (question
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (reference))
      (attribute
        (identifier)
        (reference))
      (attribute
        (identifier)
        (string
          (string_content)))))
  (question
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (boolean))
      (block
        (identifier)
        (identifier)
        (body
          (attribute
            (identifier)
            (string
              (string_content)))))
      (block
        (identifier)
        (identifier)
        (body
          (attribute
            (identifier)
            (string
              (string_content)))
          (attribute
            (identifier)
            (string
              (string_content))))))))

==================
action
==================

action "scc-services" {
  reason       = "no google_* resource exists for it"
  run          = "scripts/scc-services.sh"
  args         = ["--organization", "{customer_organization_id}"]
  execute_args = ["--apply"]
  phase        = "before-apply"
}

---

(source_file
  (action
    (string
      (string_content))
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (list
          (string
            (string_content))
          (string
            (interpolation
              (parameter)))))
      (attribute
        (identifier)
        (list
          (string
            (string_content))))
      (attribute
        (identifier)
        (string
          (string_content))))))

==================
notice
==================

notice cis_baseline_adopted {
  text     = "Run satz adopt once, so the policies Google set already are imported."
  run      = "satz adopt <estate> --execute --import"
  severity = error
}

---

(source_file
  (notice
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (reference)))))

==================
offers
==================

offers "presets/cis/CIS-GCP-Foundation-4.0.satz" {
  when     = use_cis_baseline
  phase    = "once the map is in"
  requires = ["presets/estate-core.satz"]
}

---

(source_file
  (offers
    (string
      (string_content))
    (body
      (attribute
        (identifier)
        (reference))
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (list
          (string
            (string_content)))))))

==================
export
==================

export "customer_organization_id" = customer_organization_id description "The organisation id"
export "infra_folder" = "${{google_folder.infra_folder.name}}"
export "regions" = ["europe-west3", "europe-west4"]

---

(source_file
  (export
    (string
      (string_content))
    (reference)
    (string
      (string_content)))
  (export
    (string
      (string_content))
    (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)))
  (export
    (string
      (string_content))
    (list
      (string
        (string_content))
      (string
        (string_content)))))

==================
interface
==================

interface "team-a" {
  export "team_folder" = "${{google_folder.team_a.name}}" description "Team A's folder"
  export "regions"     = ["europe-west3"]
}

---

(source_file
  (interface
    (string
      (string_content))
    (interface_body
      (export
        (string
          (string_content))
        (string
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence))
        (string
          (string_content)))
      (export
        (string
          (string_content))
        (list
          (string
            (string_content)))))))

==================
export of every resource of a type
==================

export "folders" = all google_folder description "d"

---

(source_file
  (export
    (string
      (string_content))
    (all_resources
      (identifier))
    (string
      (string_content))))

==================
export with attach points
==================

export "vpc" = "v" attach ["google_compute_shared_vpc_service_project"] description "d"
export "p" = "x" description "d" attach ["google_project_iam_member"]

---

(source_file
  (export
    (string
      (string_content))
    (string
      (string_content))
    (list
      (string
        (string_content)))
    (string
      (string_content)))
  (export
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))
    (list
      (string
        (string_content)))))

==================
interface using others
==================

interface "team-a" {
  use interface "network"
  use interface ["dns", "logs"] when want_logs
  export "own" = 1
}

---

(source_file
  (interface
    (string
      (string_content))
    (interface_body
      (use_interface
        (string
          (string_content)))
      (use_interface
        (list
          (string
            (string_content))
          (string
            (string_content)))
        (identifier))
      (export
        (string
          (string_content))
        (number)))))

==================
hcl passthrough, bare and trusted, with nested braces, strings and comments
==================

hcl {
  resource "google_compute_address" "legacy_ip" {
    name = "legacy-ip" // a comment inside
    labels = { "a" = "}" } # braces in strings do not count
  }
}
hcl trust "reviewed 2026-08-30: static address until the provider gap closes" {
  /* block comment */
  resource "google_compute_address" "b" { region = "europe-west3" }
}

---

(source_file
  (hcl_block
    (hcl_body
      (hcl_content
        (hcl_text)
        (hcl_string)
        (hcl_string)
        (hcl_body
          (hcl_content
            (hcl_text)
            (hcl_string)
            (comment)
            (hcl_text)
            (hcl_body
              (hcl_content
                (hcl_string)
                (hcl_text)
                (hcl_string))))
          (comment)))))
  (hcl_block
    (string
      (string_content))
    (hcl_body
      (comment)
      (hcl_content
        (hcl_text)
        (hcl_string)
        (hcl_string)
        (hcl_body
          (hcl_content
            (hcl_text)
            (hcl_string)))))))

==================
hcl stays an ordinary key inside a body
==================

google_thing {
  hcl = "not a block"
  action { type = "Delete" }
}

---

(source_file
  (block
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (block
        (identifier)
        (body
          (attribute
            (identifier)
            (string
              (string_content))))))))

==================
common interface
==================

interface "dns" common {
  export "zone" = "z"
}

---

(source_file
  (interface
    (string
      (string_content))
    (interface_body
      (export
        (string
          (string_content))
        (string
          (string_content))))))

==================
interface file
==================

interface "archive"

central {
  estate        = "showcase"
  organizations = ["organizations/123456789012"]
}

output "folder" {
  value   = "${{data.google_active_folder.infra.name}}"
  attach  = ["google_folder_iam_member"]
  targets = ["google_folder.infra"]
}

---

(source_file
  (header
    (string
      (string_content)))
  (block
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (list
          (string
            (string_content))))))
  (block
    (identifier)
    (string
      (string_content))
    (body
      (attribute
        (identifier)
        (string
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)))
      (attribute
        (identifier)
        (list
          (string
            (string_content))))
      (attribute
        (identifier)
        (list
          (string
            (string_content)))))))

==================
export of the resources under one folder
==================

export "team" = all google_project under google_folder.team_a

---

(source_file
  (export
    (string
      (string_content))
    (all_resources
      (identifier)
      (identifier))))

==================
private statement
==================

private google_storage_bucket.logs

---

(source_file
  (private
    (identifier)))

==================
request point on a list param
==================

request shared_vpc_subnets {
  key    = "name"
  fields = ["name", "cidr", "region"]
}

---

(source_file
  (request
    (identifier)
    (body
      (attribute
        (identifier)
        (string
          (string_content)))
      (attribute
        (identifier)
        (list
          (string
            (string_content))
          (string
            (string_content))
          (string
            (string_content)))))))

==================
all with no type after it is a param named all
==================

export "a" = all
export "b" = all description "d"
export "c" = all attach ["google_folder_iam_member"]

---

(source_file
  (export
    (string
      (string_content))
    (reference))
  (export
    (string
      (string_content))
    (reference)
    (string
      (string_content)))
  (export
    (string
      (string_content))
    (reference)
    (list
      (string
        (string_content)))))

==================
private is a key unless a resource address follows
==================

private google_storage_bucket.logs
private {
  x = 1
}
private = true
google_storage_bucket {
  logs {
    private = true
  }
  "private" {
    name = "p"
  }
}

---

(source_file
  (private
    (identifier))
  (block
    (identifier)
    (body
      (attribute
        (identifier)
        (number))))
  (attribute
    (identifier)
    (boolean))
  (block
    (identifier)
    (body
      (block
        (identifier)
        (body
          (attribute
            (identifier)
            (boolean))))
      (block
        (string
          (string_content))
        (body
          (attribute
            (identifier)
            (string
              (string_content))))))))

==================
hcl passthrough with heredocs holding unbalanced braces
==================

hcl {
  resource "google_storage_bucket_object" "policy" {
    content = <<-EOT
      { "unbalanced": "{" }
      {
    EOT
    name = "policy.json"
  }
  y = <<JSON
{"a": {
JSON
}

---

(source_file
  (hcl_block
    (hcl_body
      (hcl_content
        (hcl_text)
        (hcl_string)
        (hcl_string)
        (hcl_body
          (hcl_content
            (hcl_text)
            (hcl_heredoc)
            (hcl_text)
            (hcl_string)))
        (hcl_text)
        (hcl_heredoc)))))
